--- a/Back/Catalog/appsettings.json
+++ b/Back/Catalog/appsettings.json
@@ -1,6 +1,6 @@
 {
   "PathBase": "http://localhost:5000",
-  "ConnectionString": "server=localhost;port=5433;database=catalog;uid=postgres;password=postgres;",
+  "ConnectionString": "server=www.urbanmonochrome.com;port=5433;database=catalog;uid=postgres;password=postgres;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
