--- a/Back/Docker-compose.yml
+++ b/Back/Docker-compose.yml
@@ -9,8 +9,6 @@ services:
     environment:
        - ASPNETCORE_ENVIRONMENT=Development
        - ASPNETCORE_URLS=http://+:5000
-       - ConnectionString=server=localhost;port=5433;database=catalog;uid=postgres;password=postgres;       
-       - PathBase=http://localhost:5000
     depends_on:
       - postgres
     ports:
@@ -31,7 +29,12 @@ services:
     environment:
       POSTGRES_PASSWORD: postgres
     ports:
-      - 5433:5432 
+      - 5433:5432
+  nginx:
+    image: nginx
+    container_name: lde.nginx
+    ports:
+      - 80:80
 networks:
   default:
     driver: bridge
