--- a/Back/Catalog/appsettings.json
+++ b/Back/Catalog/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "PathBase": "http://localhost:5000",
+  "PathBase": "http://www.urbanmonochrome.com:5000",
   "ConnectionString": "server=www.urbanmonochrome.com;port=5433;database=catalog;uid=postgres;password=postgres;",
   "Logging": {
     "LogLevel": {
