--- a/Back/Docker-compose.yml
+++ b/Back/Docker-compose.yml
@@ -1,6 +1,24 @@
 version: '3.8'
 
-services:  
+services:
+  basket.api:
+    container_name: lde.basket.api
+    build:
+      context: .
+      dockerfile: Basket/Dockerfile
+    enviroment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+5003
+      - Redis__Host=www.urbanmonochrome.com:6380
+    depends_on:
+        - redis
+    ports:   
+        - 5003:5003
+  redis:
+    image: redis
+    container_name: lde.redis
+    ports:
+        - 6380:6379
   catalog.api:
     container_name: lde.catalog.api
     build:
