--- a/Back/Basket/appsettings.json
+++ b/Back/Basket/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "BasePath": "http://www.urbanmonochrome.com:5003",
+  "BasePath": "http://localhost:5003",
   "Redis": {
     "Host": "www.urbanmonochrome.com:6380",
     "CacheTimeout": "01:00:00"
