--- a/Back/Docker-compose.yml
+++ b/Back/Docker-compose.yml
@@ -6,9 +6,9 @@ services:
     build:
       context: .
       dockerfile: Basket/Dockerfile
-    enviroment:
+    environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+5003
+      - ASPNETCORE_URLS=http://+:5003
       - Redis__Host=www.urbanmonochrome.com:6380
     depends_on:
         - redis
