--- a/Back/Order/appsettings.json
+++ b/Back/Order/appsettings.json
@@ -1,6 +1,6 @@
 {
   "PathBase": "http://localhost:5001",
-  "ConnectionString": "server=localhost;port=5433;database=order;uid=postgres;password=postgres;",
+  "ConnectionString": "server=www.urbanmonochrome.com;port=5433;database=order;uid=postgres;password=postgres;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
