--- a/Back/Order/Order.Host.csproj
+++ b/Back/Order/Order.Host.csproj
@@ -23,4 +23,9 @@
     <ProjectReference Include="..\Infrastucture\Infrastucture.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Requests\" />
+    <Folder Include="Models\Responses\" />
+  </ItemGroup>
+
 </Project>
