--- a/Back/Notification/Nitifacation.Host/appsettings.json
+++ b/Back/Notification/Nitifacation.Host/appsettings.json
@@ -1,8 +1,10 @@
 {
-  "SendPuls": {
-    "ClientId": "c8a85c3645b49fac8ffc18bd03c4e023",
-    "ClientSecret": "19cb2974a601d35eb36f431f5839a431",
-    "UrlToken": "https://api.sendpulse.com/oauth/access_token"
+  "Credential": {
+    "Email": "email of shop",
+    "Password": "password or key",
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Name": "Urban Monochrome"
   },
   "Logging": {
     "LogLevel": {
