--- a/Back/Docker-compose.yml
+++ b/Back/Docker-compose.yml
@@ -44,6 +44,16 @@ services:
       - postgres
     ports:
       - 5001:5001
+  notify.api:
+    container_name: lde.notify.api
+    build:
+      context: .
+      dockerfile: Notification/Dockerfile
+    environment:
+        - ASPNETCORE_ENVIRONMENT=Development
+        - ASPNETCORE_URLS=http://+:5004
+    ports:
+      - 5004:5004
   pgadmin4:
     image: dpage/pgadmin4
     container_name: lde.pgadmin4
