--- a/Back/Notification/Notification.Host.csproj
+++ b/Back/Notification/Notification.Host.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Infrastucture\Infrastucture.csproj" />
+    <ProjectReference Include="..\Infrastucture\Infrastucture.csproj" />
   </ItemGroup>
 
 </Project>
