--- a/Back/Basket/Basket.Host.csproj
+++ b/Back/Basket/Basket.Host.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Infrastucture\Infrastucture.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Dto\" />
+  </ItemGroup>
+
 </Project>
