--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "devDependencies": {
     "@types/node-sass": "^4.11.8",
     "sass": "^1.81.0"
+  },
+  "dependencies": {
+    "classnames": "^2.5.1",
+    "lodash": "^4.17.21"
   }
 }
