--- a/Back/Basket/appsettings.json
+++ b/Back/Basket/appsettings.json
@@ -4,6 +4,10 @@
     "Host": "www.urbanmonochrome.com:6380",
     "CacheTimeout": "01:00:00"
   },
+  "Client": {
+    "Id": "basket",
+    "Secret": "secret"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
