--- a/Back/Basket/appsettings.json
+++ b/Back/Basket/appsettings.json
@@ -1,8 +1,16 @@
 {
-  "BasePath": "http://localhost:5003",
+  "PathBase": "http://localhost:5003",
   "Redis": {
     "Host": "www.urbanmonochrome.com:6380",
     "CacheTimeout": "01:00:00"
+  },
+  "Authorization": {
+    "Authority": "http://localhost:5002",
+    "SiteAudience": "localhost"
+  },
+  "Client": {
+    "Id": "basket",
+    "Secret": "secret"
   },
   "Logging": {
     "LogLevel": {
