--- a/Back/Basket/Basket.Host.csproj
+++ b/Back/Basket/Basket.Host.csproj
@@ -9,6 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\Dto\**" />
+    <Content Remove="Models\Dto\**" />
+    <EmbeddedResource Remove="Models\Dto\**" />
+    <None Remove="Models\Dto\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.1.0" />
@@ -16,10 +24,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Infrastucture\Infrastucture.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\Dto\" />
   </ItemGroup>
 
 </Project>
