--- a/Back/Identity/Dockerfile
+++ b/Back/Identity/Dockerfile
@@ -1,11 +1,8 @@
-﻿# https://hub.docker.com/_/microsoft-dotnet
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+﻿FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 COPY . /src
 WORKDIR /src/IdentityServer/IdentityServer
 RUN dotnet publish -c Release -o /app 
 
-
-# final stage/image
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=build /app ./
