identity basket with authi

--- a/Back/Identity/Dockerfile
+++ b/Back/Identity/Dockerfile
@@ -1,6 +1,6 @@
 ﻿FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 COPY . /src
-WORKDIR /src/IdentityServer/IdentityServer
+WORKDIR /src/Identity
 RUN dotnet publish -c Release -o /app 
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
