--- a/Back/Identity/appsettings.json
+++ b/Back/Identity/appsettings.json
@@ -1,8 +1,9 @@
 {
-  "CatalogApi": "http://localhost:5000",
-  "BasketApi": "http://localhost:5003",
+  "CatalogApi": "http://www.urbanmonochrome.com:5000",
+  "BasketApi": "http://www.urbanmonochrome.com:5003",
   "ReactClientUrl": "http://localhost:3000",
   "ConnectionString": "server=www.urbanmonochrome.com;port=5433;database=identity;uid=postgres;password=postgres;",
+  "Secret": "secret",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
