--- a/Back/Basket/appsettings.json
+++ b/Back/Basket/appsettings.json
@@ -1,12 +1,12 @@
 {
-  "PathBase": "http://localhost:5003",
+  "PathBase": "http://www.urbanmonochrome.com:5003",
   "Redis": {
     "Host": "www.urbanmonochrome.com:6380",
     "CacheTimeout": "01:00:00"
   },
   "Authorization": {
-    "Authority": "http://localhost:5002",
-    "SiteAudience": "localhost"
+    "Authority": "http://www.urbanmonochrome.com:5002",
+    "SiteAudience": "urbanmonochrome.com"
   },
   "Client": {
     "Id": "basket",
