--- a/Back/Docker-compose.yml
+++ b/Back/Docker-compose.yml
@@ -9,7 +9,10 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:5003
+      - Authorization__Authority=http://www.urbanmonochrome.com:5002
       - Redis__Host=www.urbanmonochrome.com:6380
+      - Redis__CacheTimeout=01:00:00
+      - PathBase=http://www.urbanmonochrome.com:5003
     depends_on:
         - redis
     ports:   
@@ -27,6 +30,7 @@ services:
     environment:
        - ASPNETCORE_ENVIRONMENT=Development
        - ASPNETCORE_URLS=http://+:5000
+       - PathBase=http://www.urbanmonochrome.com:5000
     depends_on:
       - postgres
     ports:
@@ -76,6 +80,17 @@ services:
     container_name: lde.nginx
     ports:
       - 80:80
+  identityserver:
+    container_name: lde.identityserver
+    build:
+      context: .
+      dockerfile: Identity/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:5002      
+      - BasketApi=http://www.urbanmonochrome.com:5003
+    ports:
+      - 5002:5002
 networks:
   default:
     driver: bridge
