register + database with testuser

--- a/Back/Identity/appsettings.json
+++ b/Back/Identity/appsettings.json
@@ -3,11 +3,17 @@
   "BasketApi": "http://www.urbanmonochrome.com:5003",
   "ReactClientUrl": "http://localhost:3000",
   "ConnectionString": "server=www.urbanmonochrome.com;port=5433;database=identity;uid=postgres;password=postgres;",
-  "Secret": "secret",
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "Authentication": {
+    "Google": {
+      "ClientId": "your client id",
+      "ClientSecret": "your client secret"
+    }
+  },
+    "Secret": "secret",
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
     }
   }
-}
