add registration login authentification protect api

--- a/Back/Catalog/appsettings.json
+++ b/Back/Catalog/appsettings.json
@@ -1,6 +1,14 @@
 {
   "PathBase": "http://www.urbanmonochrome.com:5000",
   "ConnectionString": "server=www.urbanmonochrome.com;port=5433;database=catalog;uid=postgres;password=postgres;",
+  "Authorization": {
+    "Authority": "http://www.urbanmonochrome.com:5002",
+    "SiteAudience": "urbanmonochrome.com"
+  },
+  "Client": {
+    "Id": "catalog",
+    "Secret": "secret"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
