--- a/Back/Identity/appsettings.json
+++ b/Back/Identity/appsettings.json
@@ -1,6 +1,8 @@
 {
   "CatalogApi": "http://www.urbanmonochrome.com:5000",
   "BasketApi": "http://www.urbanmonochrome.com:5003",
+  "OrderApi": "http://www.urbanmonochrome.com:5001",
+  "NotificationApi": "http://www.urbanmonochrome.com:5004",
   "ReactClientUrl": "http://localhost:3000",
   "ConnectionString": "server=www.urbanmonochrome.com;port=5433;database=identity;uid=postgres;password=postgres;",
   "Authentication": {
@@ -9,11 +11,11 @@
       "ClientSecret": "your client secret"
     }
   },
-    "Secret": "secret",
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
+  "Secret": "secret",
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
   }
+}
