--- a/Back/Notification/appsettings.json
+++ b/Back/Notification/appsettings.json
@@ -1,11 +1,19 @@
 {
-  "PathBase": "http://localhost:5004",
+  "PathBase": "http://www.urbanmonochrome.com:5004",
   "Credential": {
     "Email": "email of shop",
     "Password": "password or key",
     "Host": "smtp.gmail.com",
     "Port": 587,
     "Name": "Urban Monochrome"
+  },
+  "Authorization": {
+    "Authority": "http://www.urbanmonochrome.com:5002",
+    "SiteAudience": "urbanmonochrome.com"
+  },
+  "Client": {
+    "Id": "notification",
+    "Secret": "secret"
   },
   "Logging": {
     "LogLevel": {
