--- a/Back/Order/appsettings.json
+++ b/Back/Order/appsettings.json
@@ -1,6 +1,14 @@
 {
-  "PathBase": "http://localhost:5001",
+  "PathBase": "http://www.urbanmonochrome.com:5001",
   "ConnectionString": "server=www.urbanmonochrome.com;port=5433;database=order;uid=postgres;password=postgres;",
+  "Authorization": {
+    "Authority": "http://www.urbanmonochrome.com:5002",
+    "SiteAudience": "urbanmonochrome.com"
+  },
+  "Client": {
+    "Id": "order",
+    "Secret": "secret"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
