--- a/Back/Order/appsettings.json
+++ b/Back/Order/appsettings.json
@@ -5,6 +5,7 @@
     "Authority": "http://www.urbanmonochrome.com:5002",
     "SiteAudience": "urbanmonochrome.com"
   },
+  "CatalogApi": "http://www.urbanmonochrome.com:5000",
   "Client": {
     "Id": "order",
     "Secret": "secret"
